changing how simd are saved and used in paes

--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -7,60 +7,27 @@
 
         <h2>LEAPS data policy and data protection</h2>
 
-        <p>To use the LEAPS online form you must agree to your details being held on behalf of LEAPS by a third party provider for administration and 
-          tracking purposes, and being used by LEAPS to contact you in the future.</p>
+        <p>To use the LEAPS online form you must agree to your details being held by LEAPS (which is hosted
+        by the University of Edinburgh) for administration and tracking purposes, and being used by LEAPS to
+        contact you in the future.</p>
 
-        <p>LEAPS would like to track your progress through LEAPS events, at the end of this school year, and 
-          through Further and/or Higher Education Institutions in order to support future LEAPS students. We 
-          will hold your details for up to eight years. We will take information from this online interview form.</p>
+        <p>LEAPS would like to track your progress through LEAPS events, at the end of this school year, and
+        through Further and/or Higher Education Institutions in order to support future LEAPS students. We
+        will hold your details for up to eight years. We will take information from this online interview form.</p>
 
-        <p>LEAPS staff may request information from Skills Development Scotland and/or Further and Higher 
-          Education Institutions as required for tracking purposes.</p>
+        <p>LEAPS staff may request information from Skills Development Scotland and/or Further and Higher
+        Education Institutions as required for tracking purposes.</p>
+        
+        <p>LEAPS and its partners may use your data for research purposes to evaluate the effectiveness of the
+        programme and to improve delivery of the LEAPS service.</p>
+        
+        <p>In order to support your applications to Further and Higher Education Institutions, LEAPS may
+        selectively make some interview information available to your school and to Further and Higher
+        Education admissions staff.</p>
+        
+        <p>If you would like further information regarding our data protection policy, or to opt out of any of the
+        above, please contact LEAPS at leaps@ed.ac.uk or on 0131 650 4676.</p>
 
-        <p>In order to support your applications to Further and Higher Education Institutions, LEAPS may 
-          selectively make some interview information available to your school and to Further and Higher 
-          Education admissions staff and may also access your application details via the UCAS website.</p>
-
-        <p>If you would like further information regarding our data protection policy, or to opt out of any of the 
-          above, please contact LEAPS at leaps@ed.ac.uk or on 0131 650 4676.</p>
-
-<!--
-        <p>The information you supply to LEAPS includes personal data such as name, date of birth, home address, postcode and details 
-        that will be used to support your applications to further and higher education institutions.</p>
-
-        <p>The collection and processing of this information will be fully compliant with the Data Protection Act and with the UK 
-        Statistics Authority Code of Practice on safeguarding the confidentiality of data.</p>
-
-        <ul>
-
-        <li>The information you supply will be held on behalf of LEAPS by a third party provider and may be used to contact you again 
-        in future if required.</li>
-
-        <li>LEAPS staff may selectively make some information available to admissions staff to support your application to Further and 
-        Higher Education institutions.</li>
-
-        <li>LEAPS may access your application details via the UCAS website in order to further support your applications where required.</li>
-
-        <li>LEAPS would like to track your progress through other LEAPS events that you attended in order to support future LEAPS students.</li>
-
-        <li>LEAPS, our partners and selected external bodies would like to track your progress through college or university in order to 
-        support future LEAPS students. Information required will typically be requested directly from the careers service associated 
-        with your school and/or your Higher Education Institution.</li>
-
-        <li>Your personal record will be held securely for tracking purposes, currently for a period of 7 years after leaving school.</li>
-
-        <li>You have a right to view the information we hold on your personal record at any time and we ask that you keep us updated with any changes.</li>
-
-        <li>We will only share your information for the purposes outlined above or where we are legally permitted to do so.</li>
-
-        </ul>
-
-        <p>By agreeing to our data policy, you are accepting all of the above points.</p>
-
-        <p>You must agree to our data policy in order to proceed with this online form and complete your registration for LEAPS support. 
-        If you have any concerns, please feel free to contact the LEAPS Office on 0131 650 4676 or <a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a></p>
--->
-      
     </div>
 </div>
 
