--- a/portality/templates/leaps/admin/admin-base.html
+++ b/portality/templates/leaps/admin/admin-base.html
@@ -43,7 +43,7 @@ jQuery(document).ready(function($) {
                     <div class="well" style="height:55px;">
                         {% if current_user.is_super %}
                             <p style="margin-top:-10px;">
-                                <a style="font-size:14px;color:#000;" href="/admin">LEAPS super admin</a>
+                                <a style="font-size:14px;color:#000;" href="/admin">UoE LEAPS super admin</a>
                             </p>
                             <p style="text-align:right;margin-top:-10px;">
                                 <a style="font-size:14px;" href="/account">Manage users</a><br>
