--- a/portality/templates/account/view.html
+++ b/portality/templates/account/view.html
@@ -11,8 +11,10 @@
     <script type="text/javascript">
     jQuery(document).ready(function() {
         var triggerdelete = function(event) {
-            event.preventDefault();
-            confirm('Are you sure you want to delete this student record?') ? $('#delete').trigger('click') : false;
+            if (!confirm('Are you sure you want to delete this account?')) {
+                event.preventDefault();
+                return false;
+            }
         };
         $('#delete').bind('click',triggerdelete);
     });
