updating with no-cache head and altering student record save and print to show correct post code info

--- a/portality/templates/head.html
+++ b/portality/templates/head.html
@@ -12,36 +12,42 @@
     <![endif]-->
 
     <!-- get jquery js -->
-    <script type="text/javascript" src="/static/portality/vendor/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="/static/portality/vendor/jquery-1.7.1.min.js?v=uoe"></script>
 
     <!-- get jquery-ui js and css -->
-    <link rel="stylesheet" href="/static/portality/vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.css">
-    <script type="text/javascript" src="/static/portality/vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.min.js"></script>
+    <link rel="stylesheet" href="/static/portality/vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.css?v=uoe">
+    <script type="text/javascript" src="/static/portality/vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.min.js?v=uoe"></script>
 
     <!-- get bootstrap js and css -->
-    <link rel="stylesheet" href="/static/portality/vendor/bootstrap/css/bootstrap.min.css">
-    <script type="text/javascript" src="/static/portality/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/portality/vendor/bootstrap/css/bootstrap.min.css?v=uoe">
+    <script type="text/javascript" src="/static/portality/vendor/bootstrap/js/bootstrap.min.js?v=uoe"></script>
 
     <!-- get tablesorter js and css -->
-    <link rel="stylesheet" type="text/css" href="/static/portality/vendor/tablesorter/themes/blue/style.css">
-    <script type="text/javascript" src="/static/portality/vendor/tablesorter/jquery.tablesorter.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/portality/vendor/tablesorter/themes/blue/style.css?v=uoe">
+    <script type="text/javascript" src="/static/portality/vendor/tablesorter/jquery.tablesorter.min.js?v=uoe"></script>
 
     <!-- get facetview -->
-    <script type="text/javascript" src="/static/vendor/facetview/vendor/linkify/1.0/jquery.linkify-1.0-min.js"></script>
-    <script type="text/javascript" src="/static/vendor/facetview/jquery.facetview.js"></script>
+    <script type="text/javascript" src="/static/vendor/facetview/vendor/linkify/1.0/jquery.linkify-1.0-min.js?v=uoe"></script>
+    <script type="text/javascript" src="/static/vendor/facetview/jquery.facetview.js?v=uoe"></script>
 
     <!-- get parsley -->
     <!--<script type="text/javascript" src="/static/vendor/parsley/parsley.extend.min.js"></script>   --> 
-    <script type="text/javascript" src="/static/vendor/parsley/parsley.js"></script>    
+    <script type="text/javascript" src="/static/vendor/parsley/parsley.js?v=uoe"></script>    
 
     <!-- get select2 -->
-    <link rel="stylesheet" type="text/css" href="/static/portality/vendor/select2-release-3.2/select2.css">
-    <script type="text/javascript" src="/static/portality/vendor/select2-release-3.2/select2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/portality/vendor/select2-release-3.2/select2.css?v=uoe">
+    <script type="text/javascript" src="/static/portality/vendor/select2-release-3.2/select2.min.js?v=uoe"></script>
 
     <!-- get our js and css -->
-    <link rel="stylesheet" type="text/css" href="/static/css/leaps.css">
-    <script type="text/javascript" src="/static/js/leaps.js"></script>
-                
+    <link rel="stylesheet" type="text/css" href="/static/css/leaps.css?v=uoe">
+    <script type="text/javascript" src="/static/js/leaps.js?v=uoe"></script>
+
+    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+  
 </head>
 
 
