--- a/portality/templates/base.html
+++ b/portality/templates/base.html
@@ -2,7 +2,7 @@
 
 <body>
 
-    <div id="container" class="container">
+    <div id="container" class="container-fluid">
 
     <div class="alert-messages">
     {% with messages = get_flashed_messages(with_categories=True) %}
