--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -107,7 +107,7 @@ jQuery(document).ready(function() {
                     </tr>
                     
                     <tr>
-	                    <td></td>
+	                    <td><input type="checkbox" name="_id"> Record ID</td>
 	                    <td></td>
 	                    <td></td>
 	                    <td><input type="checkbox" name="place_in_siblings"> Place in siblings</td>
@@ -144,14 +144,14 @@ jQuery(document).ready(function() {
         	        <tr>
 	                    <td></td>
 	                    <td></td>
-	                    <td><input type="checkbox" name="summer_school"> Summer school</td>
+	                    <td><input type="checkbox" name="summer_school"> Summer school interest</td>
 	                    <td><input type="checkbox" name="main_language_at_home"> Main language at home</td>
                     </tr>
 
         	        <tr>
 	                    <td></td>
 	                    <td></td>
-	                    <td></td>
+	                    <td><input type="checkbox" name="summer_school_applicant"> Summer school applicant</td>
 	                    <td><input type="checkbox" name="simd20"> SIMD 20</td>
                     </tr>
 								
