--- a/portality/templates/leaps/survey/closed.html
+++ b/portality/templates/leaps/survey/closed.html
@@ -7,8 +7,8 @@
 
         <h2>Closed</h2>
         
-        <p>Sorry, the LEAPS survey form has now closed for the current academic session.
-        It will become available again in early Summer.</p>
+        <p>Sorry, the LEAPS survey form has now been closed for the current session.
+        It will become available next session.</p>
 
 		</div>
 
