--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -200,7 +200,11 @@ jQuery(document).ready(function() {
 			 return txtArea || ( (e.keyCode || e.which || e.charCode || 0) !== 13 && (e.keyCode || e.which || e.charCode || 0) !== 8 && e.type !== 'text');
 		}
 		document.querySelector('form').onkeypress = checkKeys;
-		
+	
+	$('#gender').bind('change',function(e) {
+	   $('#gender_other').val('').hide();
+	   if ( $('#gender').val() == 'Other' ) $('#gender_other').show();
+	});
 });
 </script>
 
@@ -254,8 +258,8 @@ input.bigfield{
 	<div class="row-fluid">
 	    <div class="span12">
 	        <p>This survey contains six parts. You must complete every part in order to successfully save your responses. It should take no more than 30 minutes to complete, if you prepare in advance. Please have details of your qualifications, personal interests, work experience, and possible University or College applications to hand before you start this survey.</p>
-					<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
-					<p><strong>DO NOT CLOSE YOUR BROWSER WHILST COMPLETING THE SURVEY.</strong></p>
+			<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
+			<p><strong>DO NOT CLOSE YOUR BROWSER WHILST COMPLETING THE SURVEY.</strong></p>
 	        <p>Only the students of <strong>participating schools</strong> can complete the survey.</p>
 	        <p>Each part presents <strong>instructions at the top</strong> on how to complete the questions in that part.</p> 
 	        <p>Some fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
@@ -285,25 +289,57 @@ input.bigfield{
 	</div>
 
 	<div class="row-fluid">
-	    <div class="span12">		
+	    <div class="span6">		
 	        <table>
 	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">First name</td>
                 		<td><input type="text" name="first_name" data-required="true"></td>
-
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">Last name</td>
                 		<td><input type="text" name="last_name" data-required="true"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Date of birth</td>
                 		<td><input type="text" class="dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"><br>
                 		<div class="dobwarning" style="color:red;font-size:0.8em;margin-top:-10px;margin-bottom:10px;display:none;">format must be DD/MM/YYYY</div>
                 		</td>
-
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">UCAS number</td>
                 		<td><input type="text" name="ucas_number"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+                    
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">School</td>
                 		<td><select name="school" data-required="true">
@@ -312,10 +348,26 @@ input.bigfield{
                 		        <option>{{ opt }}</option>
                 		    {% endfor %}
                 		</select></td>
-
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">School house</td>
                 		<td><input type="text" name="school_house"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+                    
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Year group</td>
                 		<td><select name="year" data-required="true">
@@ -326,44 +378,131 @@ input.bigfield{
                 		    <option>Sixth year</option>
                 		    <option>Other</option>
                 		</select></td>
-
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Gender</td>
-                		<td><select name="gender" data-required="true">
-                		    <option></option>
-                		    <option>Male</option>
-                		    <option>Female</option>
-                		    <option>Other</option>
-                		    <option>Do not wish to disclose</option>
-                		</select></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">Email address</td>
-                		<td><input type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></td>
-
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Address</td>
-                		<td><input type="text" name="address_line_1" data-required="true"></td>
+	                    <td style="text-align:right;padding:6px 10px 0 100px;">Gender</td>
+                		<td>
+                		    <select id="gender" name="gender" data-required="true">
+                		    <option></option>
+                		    <option value="Male">Man / Male (including trans man)</option>
+                		    <option value="Female">Woman / Female (including trans woman)</option>
+                		    <option value="Other">In another way</option>
+                		    <option value="Do not wish to disclose">Prefer not to say</option>
+                		    </select>
+                		    <p id="gender_other" style="display:none">
+                		        If you want to tell us how you identify your gender, please enter it here, 
+                		        or leave blank and we will simply record it as "Other": <br>
+                    		    <input type="text" name="gender_other">
+                    		</p>
+                		</td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Home phone</td>
                 		<td><input type="text" name="home_phone"></td>
-
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">...</td>
-                		<td><input type="text" name="address_line_2"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Mobile phone</td>
                 		<td><input type="text" name="mobile_phone"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
+	                    <td style="text-align:right;padding:6px 10px 0 100px;">Address</td>
+                		<td><input type="text" name="address_line_1" data-required="true"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
+	                    <td style="text-align:right;padding:6px 10px 0 100px;">...</td>
+                		<td><input type="text" name="address_line_2"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">City</td>
                 		<td><input type="text" name="city" data-required="true"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
-        	            <td></td>
-        	            <td></td>
-
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">Region</td>
                 		<td colspan="3"><input type="text" name="region"></td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
+	                    <td style="text-align:right;padding:6px 10px 0 100px;">Post code</td>
+                		<td><input type="text" name="post_code" data-required="true"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+	    <div class="span6">		
+	        <table>
+	            <tbody>
+        	        <tr>
+	                    <td style="text-align:right;padding:6px 10px 0 0;">Email address</td>
+                		<td><input type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+	<div class="row-fluid">
+	    <div class="span6">		
+	        <table>
+	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">
 	                        I agree to the <br>
@@ -373,14 +512,13 @@ input.bigfield{
                 		    <option></option>
                 		    <option>Yes</option>
                 		</select></td>
-                    
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Post code</td>
-                		<td><input type="text" name="post_code" data-required="true"></td>
                     </tr>
                 </tbody>
-	        </table>
-	    </div>
-	</div>
+            </table>
+        </div>
+	    <div class="span6">		
+        </div>
+    </div>
 
 </div>
 
@@ -705,25 +843,31 @@ input.bigfield{
 	</div>
 
 	<div class="row-fluid">
-	    <div class="span12">		
-	        <table>
-                <tbody>
-                    <tr>
-                        <td style="text-align:right;padding:6px 10px 0 0;">Please describe any career plans you may have</td>
-                        <td><textarea class="bigfield" name="career_plans"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right;padding:6px 10px 0 0;">List any additional qualifications not already mentioned (e.g. Sports Leadership etc)</td>
-                        <td><textarea class="bigfield" name="additional_qualifications"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align:right;padding:6px 10px 0 0;">If you feel your academic performance has been affected at any time in school, 
-												please tell us about it here e.g. a period of absence from school, health issues, caring responsibilities, bereavement. (At your 
-												LEAPS interview, we may discuss if this would be relevant to share with university admissions tutors.)</td>
-                        <td><textarea class="bigfield" name="issues_affecting_performance"></textarea></td>
-                    </tr>
-                </tbody>
-	        </table>
+	    <div class="span6">
+            <p style="text-align:right;padding:6px 10px 0 0;">Please describe any career plans you may have</p>
+	    </div>
+	    <div class="span6">
+            <p><textarea class="bigfield" name="career_plans"></textarea></p>
+	    </div>
+	</div>
+
+	<div class="row-fluid">
+	    <div class="span6">
+            <p style="text-align:right;padding:6px 10px 0 0;">List any additional qualifications not already mentioned (e.g. Sports Leadership etc)</p>
+	    </div>
+	    <div class="span6">
+            <p><textarea class="bigfield" name="additional_qualifications"></textarea></p>
+	    </div>
+	</div>
+
+	<div class="row-fluid">
+	    <div class="span6">
+            <p style="text-align:right;padding:6px 10px 0 0;">If you feel your academic performance has been affected at any time in school, 
+												please tell us about it here e.g. a period of absence from school, time spent in care, health issues, caring responsibilities, bereavement. (At your 
+												LEAPS interview, we may discuss if this would be relevant to share with university admissions tutors.)</p>
+	    </div>
+	    <div class="span6">
+            <p><textarea class="bigfield" name="issues_affecting_performance"></textarea></p>
 	    </div>
 	</div>
 
@@ -750,6 +894,7 @@ input.bigfield{
 	<div class="row-fluid" style="margin-top:30px;">
 	    <div class="span6">
 	        <div class="alert alert-success">
+	            <!--<p><input type="checkbox" id="agreed" data-required="true"> Agree to the LEAPS Data policy</p> removed again because form already has this - check acceptable-->
             	<input id="triggersave" class="btn btn-success span2" style="margin-left:100px;" type="submit" name="submit" value="Submit your survey" />
 	        </div>
 	    </div>
