--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -575,7 +575,7 @@ fieldset{
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Created date</td>
                 		<td>
                 		    <input type="hidden" name="created_date" value="{{record.data.created_date}}">
-                		    <p style="padding-top:5px;">{{record.data.created_date}}<br>ID: {{record._id}}</p>
+                		    <p style="padding-top:5px;">{{record.data.created_date}}<br>ID: {{record.data.id}}</p>
                 		</td>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">Last updated</td>
                 		<td><p style="padding-top:5px;">{{record.data.last_updated}}</p></td>
