--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -107,7 +107,7 @@ jQuery(document).ready(function() {
                     </tr>
                     
                     <tr>
-	                    <td><input type="checkbox" name="_id"> Record ID</td>
+	                    <td><input type="checkbox" name="id"> Record ID</td>
 	                    <td></td>
 	                    <td></td>
 	                    <td><input type="checkbox" name="place_in_siblings"> Place in siblings</td>
