adding data policy update

--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -2,7 +2,7 @@
 		<p>Lothians Equal Access Programme for Schools &middot; Room 1/06 Old Moray House &middot; Holyrood Road &middot; Edinburgh &middot; EH8 8AQ</p>
 		<p>
 		<a href="/">LEAPS</a> | 
-		<a href="/policy">Data policy</a> | 
+		<a href="/policy">Privacy policy</a> | 
 		<a href="/survey">Survey form</a> | 
 		<a href="/schools">Schools</a> | 
 		<a href="/universities">Universities</a> | 
