--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -5,29 +5,68 @@
 <div class="row-fluid">
     <div class="span12">
 
-        <h2>LEAPS data policy and data protection</h2>
+        <h1>Privacy Policy</h1>
 
-        <p>To use the LEAPS online form you must agree to your details being held by LEAPS (which is hosted
-        by the University of Edinburgh) for administration and tracking purposes, and being used by LEAPS to
-        contact you in the future.</p>
-
-        <p>LEAPS would like to track your progress through LEAPS events, at the end of this school year, and
-        through Further and/or Higher Education Institutions in order to support future LEAPS students. We
-        will hold your details for up to eight years. We will take information from this online interview form.</p>
-
-        <p>LEAPS staff may request information from Skills Development Scotland and/or Further and Higher
-        Education Institutions as required for tracking purposes.</p>
+        <h2>About LEAPS</h2>
         
-        <p>LEAPS and its partners may use your data for research purposes to evaluate the effectiveness of the
-        programme and to improve delivery of the LEAPS service.</p>
-        
-        <p>In order to support your applications to Further and Higher Education Institutions, LEAPS may
-        selectively make some interview information available to your school and to Further and Higher
-        Education admissions staff.</p>
-        
-        <p>If you would like further information regarding our data protection policy, or to opt out of any of the
-        above, please contact LEAPS at leaps@ed.ac.uk or on 0131 650 4676.</p>
+        <p>LEAPS is a successful and unique widening participation programme, funded by its 
+        <a href="http://www.leapsonline.org/node/1089">higher education institution and
+        local council partners</a> to increase progression to higher education in South East Scotland. We aim to encourage and
+        advise students who are traditionally under-represented in higher education and we currently work with 
+        <a href="http://www.leapsonline.org/node/1137">59</a>
+        schools throughout South East Scotland, supporting pupils who match
+        <a href="http://www.leapsonline.org/node/1081">LEAPS eligibility criteria</a>. LEAPS is also
+        supported by Skills Development Scotland and delivers the Scottish Funding Council's 
+        <a href="http://www.sfc.ac.uk/Priorities/Access/SHEP/SchoolsforHigherEducationProgramme.aspx">Schools for Higher Education
+        Programme</a> (SHEP) in South East Scotland. LEAPS is hosted by the University of Edinburgh.</p>
 
+        <h2>Information about you: how we use it and with whom we share it</h2>
+
+        <p>Please note that the information you provide, and how we use it, will depend on your level of engagement with us
+        but it may be used by LEAPS:</p>
+        
+        <ul>
+            <li>To administer your involvement in the LEAPS programme (including our events).</li>
+            <li>To provide you with personalised information, advice and guidance regarding your current, Further and
+Higher Education.</li>
+            <li>To inform you of information, activities and events that may support your interest in and transition to
+Further and Higher Education.</li>
+            <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the
+LEAPS programme.</li>
+        </ul>
+
+        <p>LEAPS uses external companies to process information about you in order to facilitate communications. We use
+        <a href="https://www.dotmailer.com/terms/privacy-policy/">Dotmailer</a>
+        and <a href="http://www.textanywhere.net/info-sec-policy.aspx">TextAnywhere</a>
+        to do this. You can unsubscribe from Dotmailer emails by clicking on the unsubscribe
+        link at the foot of the email campaign. You can unsubscribe from TextAnywhere messages by texting the word STOP
+        back by return.</p>
+
+        <ul>
+            <li>We are using information about you because it is in your, and our, legitimate interest for us to do so. By
+            processing your information, LEAPS can liaise with you directly to administer your involvement in the LEAPS
+            programme (including our events) and to support your interest in and transition to Further and Higher
+            Education.</li>
+        </ul>
+
+        <p>Information about you may be shared with:</p>
+        
+        <ul>
+            <li>Your school.</li>
+            <li>Further and Higher Education Institutions in the UK and abroad.</li>
+            <li>Skills Development Scotland.</li>
+        </ul>
+
+        <p>We will hold the personal data you provided us for up to 3 years. After this time all identifiable personal data will be
+        deleted and the remaining data will be held in an anonymised format.</p>
+
+        <p>We do not use profiling or automated decision-making processes.</p>
+
+        <p>If you have any questions or you would like to change your communications preferences, please contact the LEAPS
+        Office at <a href="mailto:leaps@ed.ac.uk"></a>leaps@ed.ac.uk</a>.</p>
+
+        <p>This privacy statement is continued at: 
+        <br><a href="https://www.edweb.ed.ac.uk/records-management/notice">Continued privacy notice</a></p>
     </div>
 </div>
 
