--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -257,6 +257,8 @@ input.bigfield{
 
 	<div class="row-fluid">
 	    <div class="span12">
+	        <p>You can find out how we use and what we do with your personal data <a href="/policy">here</a>.
+            When you are ready to begin the survey, please read the notes below.</p>
 	        <p>This survey contains six parts. You must complete every part in order to successfully save your responses. It should take no more than 30 minutes to complete, if you prepare in advance. Please have details of your qualifications, personal interests, work experience, and possible University or College applications to hand before you start this survey.</p>
 			<p>It is recommended that you complete this survey on a PC as it is easier than using an ipad or tablet.</p>
 			<p><strong>DO NOT CLOSE YOUR BROWSER WHILST COMPLETING THE SURVEY.</strong></p>
@@ -289,7 +291,7 @@ input.bigfield{
 	</div>
 
 	<div class="row-fluid">
-	    <div class="span6">		
+	    <div class="span6">
 	        <table>
 	            <tbody>
         	        <tr>
@@ -496,27 +498,6 @@ input.bigfield{
                     </tr>
                 </tbody>
             </table>
-        </div>
-    </div>
-
-	<div class="row-fluid">
-	    <div class="span6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">
-	                        I agree to the <br>
-                            <a target="_blank" href="/policy">LEAPS data policy</a>
-	                    </td>
-                		<td><select name="data_policy_agreement" data-required="true">
-                		    <option></option>
-                		    <option>Yes</option>
-                		</select></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-	    <div class="span6">		
         </div>
     </div>
 
