--- a/portality/templates/head.html
+++ b/portality/templates/head.html
@@ -6,6 +6,8 @@
     <meta name="description" content="{{ app.config['SERVICE_TAGLINE'] }}">
     <meta name="author" content="{{ app.config['ADMIN_NAME'] }}">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
