--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -292,24 +292,24 @@ input.bigfield{
 
 	<div class="row-fluid">
 	    <div class="span6">
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 0;">First name</td>
-                		<td><input type="text" name="first_name" data-required="true"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="span6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">First name</p>
+	            </div>
+	            <div class="span6">
+            		<p><input type="text" name="first_name" data-required="true"></p>
+	            </div>
+	        </div>
         </div>
 	    <div class="span6">		
-	        <table>
-	            <tbody>
-        	        <tr>
-	                    <td style="text-align:right;padding:6px 10px 0 100px;">Last name</td>
-                		<td><input type="text" name="last_name" data-required="true"></td>
-                    </tr>
-                </tbody>
-            </table>
+	        <div class="row">
+	            <div class="span6">
+                    <p style="text-align:right;padding:6px 10px 0 0;">Last name</p>
+	            </div>
+	            <div class="span6">
+            		<p><input type="text" name="last_name" data-required="true"></p>
+	            </div>
+	        </div>
         </div>
     </div>
 
