trying bootstrap 3 for the survey form

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+<link rel="stylesheet" type="text/css" media="all" href="/static/bootstrap3/bootstrap.min.css" />
+<script type="text/javascript" src="/static/bootstrap3/bootstrap.min.js"></script>
+
 <script>
 jQuery(document).ready(function() {    
 
