--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -215,7 +215,7 @@ jQuery(document).ready(function() {
 .part .well{
     margin-top:50px;
 }
-.part .hero-unit{
+.part .jumbotron{
     margin-top:50px;
 }
 .narrow{
@@ -250,16 +250,16 @@ input.bigfield{
 <!-- the intro part -->
 <div class="part intro">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h1>Welcome to the LEAPS student survey</h1>
 	        </div>
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <p>You can find out how we use and what we do with your personal data <a href="/policy">here</a>.
             When you are ready to begin the survey, please read the notes below.</p>
 	        <p>This survey contains six parts. You must complete every part in order to successfully save your responses. It should take no more than 30 minutes to complete, if you prepare in advance. Please have details of your qualifications, personal interests, work experience, and possible University or College applications to hand before you start this survey.</p>
@@ -284,8 +284,8 @@ input.bigfield{
 <!-- the student details page -->
 <div class="part student">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Your details</h2>
 	            <p><strong>Part 1 of 6</strong> - please provide your personal details below, to create your record.</p>
@@ -293,31 +293,31 @@ input.bigfield{
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span6">
+	<div class="row">
+	    <div class="col-md-6">
 	        <div class="row">
-	            <div class="span6">
+	            <div class="col-md-6">
                     <p style="text-align:right;padding:6px 10px 0 0;">First name</p>
 	            </div>
-	            <div class="span6">
+	            <div class="col-md-6">
             		<p><input type="text" name="first_name" data-required="true"></p>
 	            </div>
 	        </div>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <div class="row">
-	            <div class="span6">
+	            <div class="col-md-6">
                     <p style="text-align:right;padding:6px 10px 0 0;">Last name</p>
 	            </div>
-	            <div class="span6">
+	            <div class="col-md-6">
             		<p><input type="text" name="last_name" data-required="true"></p>
 	            </div>
 	        </div>
         </div>
     </div>
 
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -329,7 +329,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -341,8 +341,8 @@ input.bigfield{
         </div>
     </div>
                     
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -357,7 +357,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -369,8 +369,8 @@ input.bigfield{
         </div>
     </div>
                     
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -387,7 +387,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -412,8 +412,8 @@ input.bigfield{
         </div>
     </div>
 
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -423,7 +423,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -435,8 +435,8 @@ input.bigfield{
         </div>
     </div>
 
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -446,7 +446,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -458,8 +458,8 @@ input.bigfield{
         </div>
     </div>
 
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -469,7 +469,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -481,8 +481,8 @@ input.bigfield{
         </div>
     </div>
 
-	<div class="row-fluid">
-	    <div class="span6">		
+	<div class="row">
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -492,7 +492,7 @@ input.bigfield{
                 </tbody>
             </table>
         </div>
-	    <div class="span6">		
+	    <div class="col-md-6">		
 	        <table>
 	            <tbody>
         	        <tr>
@@ -511,8 +511,8 @@ input.bigfield{
 <!-- the qualifications page -->
 <div class="part qualifications">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Qualifications and currently sitting</h2>
 	            <p><strong>Part 2 of 6</strong> - <strong>Please input details of all qualifications you have (or are studying for current year) for each year of school</strong>. <br><b>Please include any qualifications you sat but did not pass.</b><br /><br />If you do not yet know your grade, select Unknown in the Grade field. If you have any qualifications that do not meet the criteria below, you will have the option to describe them on the following pages. Use one row per qualification.</p>
@@ -522,8 +522,8 @@ input.bigfield{
 
     <h3>Third / Fourth year qualifications</h3>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi manyrows">
                 <thead>
                     <tr>
@@ -567,8 +567,8 @@ input.bigfield{
 
     <h3>Fifth year qualifications</h3>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi manyrows">
                 <thead>
                     <tr>
@@ -611,8 +611,8 @@ input.bigfield{
 
     <h3>Sixth year / other qualifications</h3>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi manyrows">
                 <thead>
                     <tr>
@@ -663,8 +663,8 @@ input.bigfield{
 <!-- the applications page -->
 <div class="part applications">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Potential Applications</h2>
 	            <p><strong>Part 3 of 6</strong> - please list any applications for further or higher education that you are thinking of making. Use one row per application, up to the maximum of 6. If you have not made any decisions yet, please feel free to leave this section blank.</p>
@@ -672,8 +672,8 @@ input.bigfield{
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi">
                 <thead>
                     <tr>
@@ -720,8 +720,8 @@ input.bigfield{
 <!-- the interests page -->
 <div class="part interests">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Interests and achievements</h2>
 	            <p><strong>Part 4 of 6</strong> - please give short details of your extra-curricular interests and achievements e.g. 
@@ -734,8 +734,8 @@ input.bigfield{
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi">
                 <thead>
                     <tr>
@@ -767,8 +767,8 @@ input.bigfield{
 <!-- the experience page -->
 <div class="part experience">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Work and other experience</h2>
 	            <p><strong>Part 5 of 6</strong> - please give short details of any work or voluntary experience you have had e.g. 
@@ -781,8 +781,8 @@ input.bigfield{
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span12">		
+	<div class="row">
+	    <div class="col-md-12">		
 	        <table class="multi">
                 <thead>
                     <tr>
@@ -817,8 +817,8 @@ input.bigfield{
 <!-- the extra page -->
 <div class="part extra">
 
-	<div class="row-fluid">
-	    <div class="span12">
+	<div class="row">
+	    <div class="col-md-12">
 	        <div class="well">
 	            <h2>Additional academic and career information</h2>
 	            <p><strong>Part 6 of 6</strong> - please provide information about any other factors that affected your academic achievements, and provide some details on your career goals and any plans you have made towards them.</p>
@@ -826,31 +826,31 @@ input.bigfield{
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span6">
+	<div class="row">
+	    <div class="col-md-6">
             <p style="text-align:right;padding:6px 10px 0 0;">Please describe any career plans you may have</p>
 	    </div>
-	    <div class="span6">
+	    <div class="col-md-6">
             <p><textarea class="bigfield" name="career_plans"></textarea></p>
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span6">
+	<div class="row">
+	    <div class="col-md-6">
             <p style="text-align:right;padding:6px 10px 0 0;">List any additional qualifications not already mentioned (e.g. Sports Leadership etc)</p>
 	    </div>
-	    <div class="span6">
+	    <div class="col-md-6">
             <p><textarea class="bigfield" name="additional_qualifications"></textarea></p>
 	    </div>
 	</div>
 
-	<div class="row-fluid">
-	    <div class="span6">
+	<div class="row">
+	    <div class="col-md-6">
             <p style="text-align:right;padding:6px 10px 0 0;">If you feel your academic performance has been affected at any time in school, 
 												please tell us about it here e.g. a period of absence from school, time spent in care, health issues, caring responsibilities, bereavement. (At your 
 												LEAPS interview, we may discuss if this would be relevant to share with university admissions tutors.)</p>
 	    </div>
-	    <div class="span6">
+	    <div class="col-md-6">
             <p><textarea class="bigfield" name="issues_affecting_performance"></textarea></p>
 	    </div>
 	</div>
@@ -866,23 +866,23 @@ input.bigfield{
 <!-- the form submission button -->
 <div class="part submit">
 
-	<div class="row-fluid">
-	    <div class="span12">
-	        <div class="hero-unit">
+	<div class="row">
+	    <div class="col-md-12">
+	        <div class="jumbotron">
 	            <h2>Ready to submit</h2>
 	            <p>You cannot edit your responses once you submit them.</p>
 	        </div>
 	    </div>
 	</div>
 
-	<div class="row-fluid" style="margin-top:30px;">
-	    <div class="span6">
+	<div class="row" style="margin-top:30px;">
+	    <div class="col-md-6">
 	        <div class="alert alert-success">
 	            <!--<p><input type="checkbox" id="agreed" data-required="true"> Agree to the LEAPS Data policy</p> removed again because form already has this - check acceptable-->
             	<input id="triggersave" class="btn btn-success span2" style="margin-left:100px;" type="submit" name="submit" value="Submit your survey" />
 	        </div>
 	    </div>
-	    <div class="span6">
+	    <div class="col-md-6">
 	        <div id="activealert" class="alert alert-warning clearfix" style="display:none;">
 	            <p>There are errors with your responses. Please click below to review your responses, then you can scroll through or use the previous / next buttons to check them. Any errors will be highlighted in red. Once there are no errors, please try to submit once again.</p>
 	        </div>
