--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -212,6 +212,9 @@ jQuery(document).ready(function() {
 </script>
 
 <style>
+body {
+    font-size:1.2em;
+}
 .part .well{
     margin-top:50px;
 }
@@ -224,14 +227,14 @@ jQuery(document).ready(function() {
 .narrow.datepicker{
     width:100px;
 }
-input, textarea {
+.add-row, .delete-row {
+    width:35px;
+}
+/*input, textarea {
     width:200px;
 }
 select {
     width:210px;
-}
-.add-row, .delete-row {
-    width:35px;
 }
 textarea.bigfield{
     width:400px;
@@ -240,7 +243,7 @@ textarea.bigfield{
 input.bigfield{
     width:360px;
     height:150px;
-}
+}*/
 </style>
 
 <form action="" id="survey" name="survey" method="post" data-validate="parsley">
@@ -300,7 +303,7 @@ input.bigfield{
                     <p style="text-align:right;padding:6px 10px 0 0;">First name</p>
 	            </div>
 	            <div class="col-md-6">
-            		<p><input type="text" name="first_name" data-required="true"></p>
+            		<p><input class="form-control" type="text" name="first_name" data-required="true"></p>
 	            </div>
 	        </div>
         </div>
@@ -310,7 +313,7 @@ input.bigfield{
                     <p style="text-align:right;padding:6px 10px 0 0;">Last name</p>
 	            </div>
 	            <div class="col-md-6">
-            		<p><input type="text" name="last_name" data-required="true"></p>
+            		<p><input class="form-control" type="text" name="last_name" data-required="true"></p>
 	            </div>
 	        </div>
         </div>
@@ -322,7 +325,7 @@ input.bigfield{
 	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Date of birth</td>
-                		<td><input type="text" class="dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"><br>
+                		<td><input type="text" class="form-control dobdatepicker checkdob" id="date_of_birth" name="date_of_birth" data-required="true" data-trigger="keyup change focusout"><br>
                 		<div class="dobwarning" style="color:red;font-size:0.8em;margin-top:-10px;margin-bottom:10px;display:none;">format must be DD/MM/YYYY</div>
                 		</td>
                     </tr>
@@ -334,7 +337,7 @@ input.bigfield{
 	            <tbody>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 100px;">UCAS number</td>
-                		<td><input type="text" name="ucas_number"></td>
+                		<td><input class="form-control" type="text" name="ucas_number"></td>
                     </tr>
                 </tbody>
             </table>
@@ -877,18 +880,13 @@ input.bigfield{
 
 	<div class="row" style="margin-top:30px;">
 	    <div class="col-md-6">
-	        <div class="alert alert-success">
-	            <!--<p><input type="checkbox" id="agreed" data-required="true"> Agree to the LEAPS Data policy</p> removed again because form already has this - check acceptable-->
-            	<input id="triggersave" class="btn btn-success span2" style="margin-left:100px;" type="submit" name="submit" value="Submit your survey" />
-	        </div>
+        	<p><input id="triggersave" class="btn btn-success btn-block" style="margin-left:100px;" type="submit" name="submit" value="Submit your survey" /></p>
 	    </div>
 	    <div class="col-md-6">
 	        <div id="activealert" class="alert alert-warning clearfix" style="display:none;">
 	            <p>There are errors with your responses. Please click below to review your responses, then you can scroll through or use the previous / next buttons to check them. Any errors will be highlighted in red. Once there are no errors, please try to submit once again.</p>
 	        </div>
-	        <div class="alert alert-warning clearfix">
-        	    <p><button class="btn btn-warning span2 review" style="margin-left:100px;">Review your responses</button></p>
-	        </div>
+    	    <p><button class="btn btn-warning btn-block review" style="margin-left:100px;">Review your responses</button></p>
 	    </div>
     </div>
 
