--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -215,6 +215,14 @@ jQuery(document).ready(function() {
 body {
     font-size:1.2em;
 }
+#container {
+    margin:0;
+    width:100%;
+}
+.content {
+    margin:0;
+    width:100%;
+}
 .part .well{
     margin-top:50px;
 }
